# CursoEd

./: CMakeLists.txt  main.c
practica1/: practica1.c  practica1.h
practica2/: practica2.c  practica2.h
practica3/: practica3.c  practica3.h
practica3/circuito/: circuito.c  circuito.h
practica3/complejos/: complejos.c  complejos.h
practica4/mandelbrot/: mandelbrot.c  mandelbrot.h
practica4/material/: bitmap.c  bitmap.h  colourScale.h
practica5/noticia/: noticia.c  noticia.h
practica5/practica5/: listaEnlazadaNoticia.c  listaEnlazadaNoticia.h
practicaListas/ejecutarPractica/: practicaListas.c  practicaListas.h
practicaListas/elemento/: elemento.c  elemento.h
practicaListas/tiposListas/: listaDoblementeEnlazada.c  listaDoblementeEnlazada.h  listaEnlazada.c  listaEnlazada.h
